# space_traders_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  enum_generator.py
.github/workflows/: cmake.yml
include/: session.h  utility.h
include/api/: register.h
include/api/agents/: my_agent.h
include/api/factions/: get_faction.h  list_factions.h
include/api/systems/: get_jump_gate.h  get_market.h  get_system.h  get_waypoint.h  list_systems.h  list_waypoints.h
include/models/: chart.h  connected_system.h  contract.h  contract_payment.h  contract_terms.h  extraction.h  extraction_yield.h  faction.h  jump_gate.h  market.h  scanned_ship.h  scanned_system.h  scanned_waypoint.h  ship.h  ship_cargo.h  ship_cargo_item.h  ship_engine.h  ship_frame.h  ship_fuel.h  ship_module.h  ship_mount.h  ship_nav.h  ship_nav_route.h  ship_nav_route_waypoint.h  ship_reactor.h  ship_registration.h  shipyard.h  shipyard_ship.h  survey.h  survey_deposit.h  system.h  system_type.h  system_waypoint.h  trade_good.h  waypoint.h  waypoint_faction.h  waypoint_orbital.h  waypoint_trait.h
include/space_traders_cpp/: client.h  i_client.h  mock_client.h  rate_limiter.h  session.h  utility.h
include/space_traders_cpp/api/: register.h  status.h
include/space_traders_cpp/api/agents/: my_agent.h
include/space_traders_cpp/api/contracts/: accept_contract.h  deliver_contract.h  fulfill_contract.h  get_contract.h  list_contracts.h
include/space_traders_cpp/api/factions/: get_faction.h  list_factions.h
include/space_traders_cpp/api/fleet/: create_chart.h  create_survey.h  dock_ship.h  extract_resources.h  get_mounts.h  get_ship.h  get_ship_cargo.h  get_ship_cooldown.h  get_ship_nav.h  install_mount.h  jettison_cargo.h  jump_ship.h  list_ships.h  navigate_ship.h  negotiate_contract.h  orbit_ship.h  patch_ship_nav.h  purchase_cargo.h  purchase_ship.h  refuel_ship.h  remove_mount.h  scan_ships.h  scan_systems.h  scan_waypoints.h  sell_cargo.h  ship_refine.h  transfer_cargo.h  warp_ship.h
include/space_traders_cpp/api/systems/: get_jump_gate.h  get_market.h  get_shipyard.h  get_system.h  get_waypoint.h  list_systems.h  list_waypoints.h
include/space_traders_cpp/models/: agent.h  chart.h  connected_system.h  contract.h  contract_deliver_good.h  contract_payment.h  contract_terms.h  cooldown.h  extraction.h  extraction_yield.h  faction.h  faction_trait.h  jump_gate.h  market.h  market_trade_good.h  market_transaction.h  meta.h  scanned_ship.h  scanned_system.h  scanned_waypoint.h  ship.h  ship_cargo.h  ship_cargo_item.h  ship_crew.h  ship_engine.h  ship_frame.h  ship_fuel.h  ship_module.h  ship_mount.h  ship_nav.h  ship_nav_flight_mode.h  ship_nav_route.h  ship_nav_route_waypoint.h  ship_nav_status.h  ship_reactor.h  ship_registration.h  ship_requirements.h  ship_role.h  ship_type.h  shipyard.h  (+15 more)
src/: client.cc  rate_limiter.cc  session.cc  session.h  utility.h
src/api/: register.cc  register.h  status.cc  status.h
src/api/agents/: my_agent.cc  my_agent.h
src/api/contracts/: accept_contract.cc  deliver_contract.cc  fulfill_contract.cc  get_contract.cc  list_contracts.cc
src/api/factions/: get_faction.cc  get_faction.h  list_factions.cc  list_factions.h
src/api/fleet/: create_chart.cc  create_survey.cc  dock_ship.cc  extract_resources.cc  get_mounts.cc  get_ship.cc  get_ship_cargo.cc  get_ship_cooldown.cc  get_ship_nav.cc  install_mount.cc  jettison_cargo.cc  jump_ship.cc  list_ships.cc  navigate_ship.cc  negotiate_contract.cc  orbit_ship.cc  patch_ship_nav.cc  purchase_cargo.cc  purchase_ship.cc  refuel_ship.cc  remove_mount.cc  scan_ships.cc  scan_systems.cc  scan_waypoints.cc  sell_cargo.cc  ship_refine.cc  transfer_cargo.cc  warp_ship.cc
src/api/systems/: get_jump_gate.cc  get_jump_gate.h  get_market.cc  get_market.h  get_shipyard.cc  get_system.cc  get_system.h  get_waypoint.cc  get_waypoint.h  list_systems.cc  list_systems.h  list_waypoints.cc  list_waypoints.h
src/models/: agent.h  chart.h  connected_system.h  contract.h  contract_deliver_good.h  contract_payment.h  contract_terms.h  cooldown.h  extraction.h  extraction_yield.h  faction.h  faction_trait.h  jump_gate.h  market.h  market_trade_good.h  market_transaction.h  meta.h  scanned_ship.h  scanned_system.h  scanned_waypoint.h  ship.h  ship_cargo.h  ship_cargo_item.h  ship_crew.h  ship_engine.h  ship_frame.h  ship_fuel.h  ship_module.h  ship_mount.h  ship_nav.h  ship_nav_flight_mode.h  ship_nav_route.h  ship_nav_route_waypoint.h  ship_nav_status.h  ship_reactor.h  ship_registration.h  ship_requirements.h  ship_role.h  ship_type.h  shipyard.h  (+15 more)
test/: api_test.cc  hello_test.cc  rate_limiter_test.cc
test/api/: register_test.cc  status_test.cc
test/api/agents/: my_agent_test.cc
test/api/contracts/: contracts_test.cc
test/api/factions/: factions_test.cc
test/api/fleet/: fleet_test.cc
test/api/systems/: systems_test.cc
test/include/space_traders_cpp_test/: api_test.h  hello_test.h
